--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.servlet.context-path=/shop
 
 ##DB Settings
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.url=jdbc:mysql://localhost:3306/helloShoeShop?createDatabaseIfNotExist=true
 spring.datasource.hikari.maximum-pool-size=5
